--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0",
-    "typed.js": "^2.0.11"
+    "pug": "^3.0.0"
   }
 }
